tests/idris2/error/error023/Error2.idr
%noinline %inline
foo : Int -> Int
foo x = x
